at 3pm (sunday) would be a great meet (not Trump&Putin, just me+Nasty)
